# miniRunAsTI

./: .gitignore  CMakeLists.txt  README.md
headers/: execution.hpp  loader.hpp  pch.hpp  utils.hpp  version.h.in
src/: execution.cpp  loader.cpp  main.cpp  utils.cpp
